--- a/scss/style.scss
+++ b/scss/style.scss
@@ -48,7 +48,7 @@ section {
   position: absolute;
   left: 0;
   top: 0;
-  padding: 3rem 18rem;
+  padding: 1rem 7rem;
 }
 
 .section {
@@ -186,7 +186,185 @@ section {
   }
 }
 
+// about
+
+.about-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-top: 3.5rem;
+  padding-bottom: 5rem;
+
+  .left-about {
+    padding-right: 2rem;
+    h4 {
+      font-size: 2rem;
+      text-transform: uppercase;
+    }
+    p {
+      text-transform: capitalize;
+      line-height: 1.5rem;
+      padding: 0.5rem;
+      color: var(--color-grey-1);
+      opacity: 0.9;
+    }
+  }
+
+  .right-about {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+    .about-item {
+      border: 1px solid var(--color-grey-5);
+      border-radius: 5px;
+      transition: all 0.4s ease-in-out;
+      box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.1);
+      &:hover {
+        cursor: default;
+        transform: translateY(-5px);
+        border: 1px solid var(--color-secondary);
+        box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.32);
+      }
+      .about-text {
+        padding: 2rem;
+        display: flex;
+        flex-direction: column;
+        .large-text {
+          font-size: 3rem;
+          font-weight: 700;
+          color: var(--color-secondary);
+        }
+        .small-text {
+          padding-left: 3rem;
+          position: relative;
+          text-transform: uppercase;
+          font-size: 1rem;
+          color: var(--color-grey-1);
+          letter-spacing: 2px;
+          opacity: 0.9;
+          &::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 10px;
+            width: 2rem;
+            height: 2px;
+            background-color: var(--color-grey-5);
+          }
+        }
+      }
+    }
+  }
+}
+
+.about-stats {
+  padding-bottom: 4rem;
+  .progress-bars {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+    .progress-bar {
+      display: flex;
+      flex-direction: column;
+      .progress-title {
+        text-transform: uppercase;
+        font-weight: 500;
+      }
+      .progress-container {
+        display: flex;
+        align-items: center;
+        .progress-text {
+          color: var(--color-grey-2);
+        }
+        .progress {
+          width: 100%;
+          height: 0.45rem;
+          background-color: var(--color-grey-4);
+          margin-left: 1rem;
+          position: relative;
+          span {
+            position: absolute;
+            left: 0;
+            top: 0;
+            height: 100%;
+            background-color: var(--color-secondary);
+            transition: all 0.4s ease-in-out;
+            border-radius: 12px;
+          }
+          .html {
+            width: 90%;
+          }
+          .css {
+            width: 90%;
+          }
+          .bootstrap {
+            width: 70%;
+          }
+          .js {
+            width: 10%;
+          }
+          .sass {
+            width: 90%;
+          }
+          .git {
+            width: 90%;
+          }
+        }
+      }
+    }
+  }
+}
+
+// TIMEline
+
+.timeline {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+  padding-bottom: 3rem;
+  .timeline-item {
+    position: relative;
+    padding: 3rem;
+    border-left: 1px solid var(--color-grey-5);
+    .timeline-icon {
+      position: absolute;
+      left: -27px;
+      top: 0;
+      background-color: var(--color-secondary);
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      i {
+        font-size: 1.2rem;
+
+      }
+    }
+  }
+}
+
 // reuse button independent document
+
+.stat-title {
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-align: center;
+  padding: 3.5rem 0;
+  position: relative;
+  &::before {
+    position: absolute;
+    content: '';
+    left: 50%;
+    bottom: 1rem;
+    width: 40%;
+    height: 2px;
+    background-color: var(--color-grey-5);
+    transform: translateX(-50%);
+  }
+}
+
 .btn-container {
   display: flex;
   align-self: flex-start;
@@ -229,6 +407,30 @@ section {
         transform: translateX(0);
         transition: all 0.4s ease-in-out;
       }
+    }
+  }
+}
+
+.main-title {
+  text-align: center;
+  h2 {
+    position: relative;
+    text-transform: uppercase;
+    font-size: 3rem;
+    font-weight: 700;
+    span {
+      color: var(--color-secondary);
+    }
+    .bg-text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      color: var(--color-grey-5);
+      transition: all 0.4s ease-in-out;
+      z-index: -1;
+      transform: translate(-50%, -50%);
+      font-weight: 800;
+      font-size: 5rem;
     }
   }
 }
