--- a/scss/style.scss
+++ b/scss/style.scss
@@ -452,6 +452,164 @@ section {
 
 // Blog
 
+.blogs-item {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
+  margin-top: 3rem;
+  .blog {
+    position: relative;
+    background-color: var(--color-grey-5);
+    border-radius: 5px;
+    box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.1);
+    transition: all 0.4s ease-in-out;
+    &:hover {
+      box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.3);
+      transform: translateY(-5px);
+      transition: all 0.4s ease-in-out;
+      img {
+        filter: grayscale(0);
+        transform: scale(1.1);
+        box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.8);
+      }
+    }
+    img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+      filter: grayscale(100%);
+      transition: all 0.4s ease-in-out;
+    }
+    .blog-text {
+      margin-top: -7px;
+      padding: 1.1rem;
+      border-top: 8px solid var(--color-secondary);
+      h4 {
+        font-size: 1.1rem;
+        margin-bottom: 0.7rem;
+        transition: all 0.4s ease-in-out;
+        cursor: pointer;
+        text-transform: uppercase;
+        transition: all 0.4s ease-in-out;
+        &:hover {
+          color: var(--color-secondary);
+        }
+      }
+      p {
+        color: var(--color-grey-2);
+        line-height: 2rem;
+        padding-bottom: 1rem;
+        transition: all 0.4s ease-in-out;
+
+        &:hover {
+          color: var(--color-secondary);
+        }
+      }
+    }
+  }
+}
+
+// contact
+
+.contact-content {
+  display: flex;
+  padding-top: 3.5rem;
+  .left-contact {
+    flex: 2;
+    h4 {
+      margin-top: 1rem;
+      font-size: 1.5rem;
+      text-transform: uppercase;
+    }
+    p {
+      margin: 0.7rem 0;
+      line-height: 1.5rem;
+    }
+    .contact-info {
+      .contact-item {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .icon {
+          display: grid;
+          grid-template-columns: 30px 1fr;
+          i {
+            display: flex;
+            align-items: center;
+            font-size: 1.3rem;
+          }
+        }
+      }
+    }
+    .contact-icons {
+      .contact-icon {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 2rem;
+        a {
+          display: flex;
+          align-items: center;
+          color: var(--color-white);
+          background-color: var(--color-grey-5);
+          cursor: pointer;
+          justify-content: center;
+          width: 50px;
+          height: 50px;
+          border-radius: 40%;
+          transition: all 0.4s ease-in-out;
+          &:hover {
+            background-color: var(--color-secondary);
+            i {
+              color: var(--color-primary);
+            }
+          }
+          i {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            font-size: 1.3rem;
+            transition: all 0.4s ease-in-out;
+          }
+        }
+      }
+    }
+  }
+  .right-contact {
+    flex: 3;
+    margin-left: 3rem;
+    .input-control {
+      margin: 1.5rem 0;
+      input,
+      textarea {
+        border-radius: 30px;
+        font-weight: inherit;
+        font-size: inherit;
+        font-family: inherit;
+        padding: 0.8rem 1.1rem;
+        border: none;
+        outline: none;
+        background-color: var(--color-grey-5);
+        width: 100%;
+        color: var(--color-white);
+        resize: none;
+      }
+    }
+    .input-control-custom {
+      display: flex;
+      :last-child {
+        margin-left: 1.5rem;
+      }
+    }
+    .submit-btn {
+      display: flex;
+      justify-content: flex-start;
+      margin-top: 1.7rem;
+    }
+  }
+}
+
 // reuse button independent document
 
 .stat-title {
