--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,20 @@
   --box-shadow-1: 0 3px 15px rgba(0, 0, 0, 0.2);
 }
 
+.light-mode {
+  --color-primary: #ffffff;
+  --color-secondary: #f56692;
+  --color-white: #454e56;
+  --color-black: #000000;
+  --color-grey-0: #f8f8f8;
+  --color-grey-1: #6c7983;
+  --color-grey-2: #6c7983;
+  --color-grey-3: #6c7983;
+  --color-grey-4: #454e56;
+  --color-grey-5: #f8f8f8;
+  --color-grey-6: #12181b;
+}
+
 body {
   background-color: var(--color-primary);
   font-family: "Poppins", sans-serif;
@@ -43,7 +57,7 @@ header {
 }
 
 section {
-  min-height: 100vh;
+  height: 100vh;
   width: 100%;
   position: absolute;
   left: 0;
@@ -128,6 +142,30 @@ section {
 }
 .controls .control i {
   font-size: 1.1rem;
+  color: var(--color-grey-2);
+  pointer-events: none;
+}
+
+.theme-btn {
+  top: 5%;
+  right: 3%;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  background-color: var(--color-grey-4);
+  cursor: pointer;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3);
+  transition: all 0.4s ease-in-out;
+}
+.theme-btn:active {
+  transform: translateY(-5px);
+}
+.theme-btn i {
+  font-size: 1.2rem;
   color: var(--color-grey-2);
   pointer-events: none;
 }
@@ -679,6 +717,98 @@ section {
   transform: translate(-50%, -50%);
   font-weight: 800;
   font-size: 5rem;
+}
+
+@media screen and (max-width: 426px) {
+  header {
+    padding: 0;
+  }
+  header .header-content {
+    grid-template-columns: 1fr;
+    padding-bottom: 10rem;
+  }
+  header .header-content .left-header .h-shape {
+    display: none;
+  }
+  header .header-content .left-header .image {
+    margin: 0 auto;
+    width: 90%;
+  }
+  header .header-content .right-header {
+    padding: 1rem 0rem !important;
+    grid-row: 1;
+    width: 90%;
+    margin: 0 auto;
+  }
+  header .header-content .right-header .name {
+    font-size: 2.5rem !important;
+  }
+  .section {
+    padding: 1rem 2rem !important;
+  }
+  .about-container {
+    grid-template-columns: 1fr;
+  }
+  .about-container .right-about {
+    grid-template-columns: 1fr;
+    padding-top: 2.5rem;
+  }
+  .about-container .left-about {
+    padding-right: 0 !important;
+  }
+  .about-container .left-about p {
+    padding-left: 0 !important;
+  }
+  .about-stats .progress-bars {
+    grid-template-columns: 1fr;
+  }
+  .timeline {
+    grid-template-columns: 1fr;
+    padding-bottom: 5rem;
+  }
+  .portfolios {
+    grid-template-columns: 1fr;
+    padding-bottom: 6rem;
+  }
+  .blogs-item {
+    grid-template-columns: 1fr;
+    padding-top: 3rem;
+    padding-bottom: 7rem;
+  }
+  .contact-content {
+    flex-direction: column;
+  }
+  .contact-content .right-contact {
+    margin-left: 0;
+    margin-top: 3rem;
+  }
+  .contact-content .right-contact .input-control-custom {
+    flex-direction: column;
+  }
+  .contact-content .right-contact .input-control-custom :last-child {
+    margin-left: 0;
+    margin-top: 1rem;
+  }
+  .controls {
+    top: auto;
+    bottom: 0;
+    flex-direction: row;
+    justify-content: center;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    background-color: var(--color-grey-5);
+  }
+  .controls .control {
+    margin: 1rem 1rem;
+  }
+  .theme-btn {
+    width: 40px;
+    height: 40px;
+  }
+  .theme-btn i {
+    font-size: 1rem;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
