--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,6 +21,20 @@
   --box-shadow-1: 0 3px 15px rgba(0, 0, 0, 0.2);
 }
 
+.light-mode {
+  --color-primary: #ffffff;
+  --color-secondary: #f56692;
+  --color-white: #454e56;
+  --color-black: #000000;
+  --color-grey-0: #f8f8f8;
+  --color-grey-1: #6c7983;
+  --color-grey-2: #6c7983;
+  --color-grey-3: #6c7983;
+  --color-grey-4: #454e56;
+  --color-grey-5: #f8f8f8;
+  --color-grey-6: #12181b;
+}
+
 body {
   background-color: var(--color-primary);
   font-family: 'Poppins', sans-serif;
@@ -43,7 +57,7 @@ header {
 }
 
 section {
-  min-height: 100vh;
+  height: 100vh;
   width: 100%;
   position: absolute;
   left: 0;
@@ -125,6 +139,30 @@ section {
       color: var(--color-grey-2);
       pointer-events: none;
     }
+  }
+}
+
+.theme-btn {
+  top: 5%;
+  right: 3%;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  background-color: var(--color-grey-4);
+  cursor: pointer;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3);
+  transition: all 0.4s ease-in-out;
+  &:active {
+    transform: translateY(-5px);
+  }
+  i {
+    font-size: 1.2rem;
+    color: var(--color-grey-2);
+    pointer-events: none;
   }
 }
 
@@ -700,3 +738,6 @@ section {
     }
   }
 }
+
+// import media
+@import './media';
