--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,8 @@ a {
 }
 
 header {
-  height: 100vh;
+  min-height: 100vh;
+  font-family: "Poppins", sans-serif;
   color: var(--color-white);
   overflow: hidden;
 }
@@ -173,7 +174,7 @@ section {
 .header-content {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  height: 100%;
+  min-height: 100vh;
 }
 .header-content .left-header {
   display: flex;
@@ -719,13 +720,13 @@ section {
   font-size: 5rem;
 }
 
-@media screen and (max-width: 426px) {
+@media (max-width: 425px) {
   header {
     padding: 0;
   }
   header .header-content {
     grid-template-columns: 1fr;
-    padding-bottom: 10rem;
+    padding-bottom: 4rem;
   }
   header .header-content .left-header .h-shape {
     display: none;
@@ -788,6 +789,109 @@ section {
   .contact-content .right-contact .input-control-custom :last-child {
     margin-left: 0;
     margin-top: 1rem;
+  }
+  .main-title h2 {
+    font-size: 2rem;
+  }
+  .main-title h2 span {
+    font-size: 2rem;
+  }
+  .main-title h2 .bg-text {
+    font-size: 1rem;
+  }
+  .controls {
+    top: auto;
+    bottom: 0;
+    flex-direction: row;
+    justify-content: center;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    background-color: var(--color-grey-5);
+  }
+  .controls .control {
+    margin: 1rem 1rem;
+  }
+  .theme-btn {
+    width: 40px;
+    height: 40px;
+  }
+  .theme-btn i {
+    font-size: 1rem;
+  }
+}
+@media (min-width: 426px) and (max-width: 768px) {
+  header {
+    padding: 0;
+  }
+  header .header-content .left-header .image {
+    width: 80%;
+    height: 70%;
+    margin-left: 2rem;
+  }
+  header .header-content .right-header {
+    padding-right: 0px !important;
+  }
+  .about-container {
+    grid-template-columns: 1fr;
+  }
+  .about-container .right-about {
+    grid-template-columns: 50%, 2fr;
+    padding-top: 2.5rem;
+  }
+  .about-container .left-about {
+    padding-right: 0 !important;
+  }
+  .about-container .left-about p {
+    padding-left: 0 !important;
+  }
+  .timeline {
+    grid-template-columns: 1fr;
+    padding-bottom: 5rem;
+  }
+  .portfolios {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    padding-bottom: 6rem;
+  }
+  .portfolios .portfolio-item .image {
+    width: 550px;
+    height: 550px;
+  }
+  .portfolios .portfolio-item .image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+  }
+  .blogs-item {
+    grid-template-columns: 1fr;
+    padding-top: 3rem;
+    padding-bottom: 7rem;
+  }
+  .contact-content {
+    padding-bottom: 6rem;
+    flex-direction: column;
+  }
+  .contact-content .right-contact {
+    margin-left: 0;
+    margin-top: 3rem;
+  }
+  .contact-content .right-contact .input-control-custom {
+    flex-direction: column;
+  }
+  .contact-content .right-contact .input-control-custom :last-child {
+    margin-left: 0;
+    margin-top: 1rem;
+  }
+  .main-title h2 {
+    font-size: 2rem;
+  }
+  .main-title h2 span {
+    font-size: 2rem;
+  }
+  .main-title h2 .bg-text {
+    font-size: 2.9rem;
   }
   .controls {
     top: auto;
