--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,9 +1,9 @@
-@media screen and (max-width: 426px) {
+@media (max-width: 425px) {
   header {
     padding: 0;
     .header-content {
       grid-template-columns: 1fr;
-      padding-bottom: 10rem;
+      padding-bottom: 4rem;
       .left-header {
         .h-shape {
           display: none;
@@ -82,6 +82,18 @@
 
   //   re use button
 
+  .main-title {
+    h2 {
+      font-size: 2rem;
+      span {
+        font-size: 2rem;
+      }
+      .bg-text {
+        font-size: 1rem;
+      }
+    }
+  }
+
   .controls {
     top: auto;
     bottom: 0;
@@ -96,6 +108,119 @@
     }
   }
 
+  .theme-btn {
+    width: 40px;
+    height: 40px;
+    i {
+      font-size: 1rem;
+    }
+  }
+}
+
+// -------------------------------
+
+@media (min-width: 426px) and (max-width: 768px) {
+  header {
+    padding: 0;
+    .header-content {
+      .left-header {
+        .image {
+          width: 80%;
+          height: 70%;
+          margin-left: 2rem;
+        }
+      }
+      .right-header {
+        padding-right: 0px !important;
+      }
+    }
+  }
+
+  .about-container {
+    grid-template-columns: 1fr;
+    .right-about {
+      grid-template-columns: 50%, 2fr;
+      padding-top: 2.5rem;
+    }
+    .left-about {
+      padding-right: 0 !important;
+      p {
+        padding-left: 0 !important;
+      }
+    }
+  }
+
+  .timeline {
+    grid-template-columns: 1fr;
+    padding-bottom: 5rem;
+  }
+
+  .portfolios {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    padding-bottom: 6rem;
+    .portfolio-item {
+      .image {
+        width: 550px;
+        height: 550px;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 15px;
+        }
+      }
+    }
+  }
+
+  .blogs-item {
+    grid-template-columns: 1fr;
+    padding-top: 3rem;
+    padding-bottom: 7rem;
+  }
+
+  .contact-content {
+    padding-bottom: 6rem;
+    flex-direction: column;
+    .right-contact {
+      margin-left: 0;
+      margin-top: 3rem;
+      .input-control-custom {
+        flex-direction: column;
+        :last-child {
+          margin-left: 0;
+          margin-top: 1rem;
+        }
+      }
+    }
+  }
+  // bottom
+
+  .main-title {
+    h2 {
+      font-size: 2rem;
+      span {
+        font-size: 2rem;
+      }
+      .bg-text {
+        font-size: 2.9rem;
+      }
+    }
+  }
+
+  .controls {
+    top: auto;
+    bottom: 0;
+    flex-direction: row;
+    justify-content: center;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    background-color: var(--color-grey-5);
+    .control {
+      margin: 1rem 1rem;
+    }
+  }
   .theme-btn {
     width: 40px;
     height: 40px;
