--- a/scss/style.scss
+++ b/scss/style.scss
@@ -51,7 +51,8 @@ a {
 }
 
 header {
-  height: 100vh;
+  min-height: 100vh;
+  font-family: 'Poppins', sans-serif;
   color: var(--color-white);
   overflow: hidden;
 }
@@ -170,7 +171,7 @@ section {
 .header-content {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  height: 100%;
+  min-height: 100vh;
   .left-header {
     display: flex;
     align-items: center;
